[package]
name = "brisk"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
gethostname = "0.5.0"
log = "0.4.22"
notify-rust = "4.11.3"
open = "5.3.2"
rumqttc = "0.24.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
tokio = "1.42.0"
tokio-rustls = "0.26.2"
typenum = "1.17.0"
whoami = "1.6.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
